Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.22
* Fixed error when trying to save multiple make/models for a part (Chris T)

Changelog for 1.3.21
* Added a default numberformat in Form.pm (Chris T)
* Added a container div for theming saved and/or posted docs (Chris T)
* Fixed an is_zero error saving purchase transactions (Nick P)
* Fixed shipping selection not displaying customer info (Chris T, 3543932)
* Fixed shipping redirection not displaying orders (Chris T, h/t Nigel T)
* Recon screen now groups journal entries by transaction (Chris T, h/t Nick P)
* Fixed empty string working as empty source for cash recon (Chris T)
* Saving a part now returns to editing the same part (Chris T, h/t Brian W)
* If pos.conf.pl is not found, now returns an intelligible error (Chris T)
* Adding action/id div to top of many screens (Chris T, h/t Erik H)
* File->get_for_template now gets most recent parts image (Chris T)
* Fixed error on generate purchase orders (Chris T, 3544857, h/t Nigel T)
* Fixed internal server errors with date parsing (Chris T, 3546698)
* Fixed "Directory Transversal Not Allowed w/fs_cssdir (Chris T, h/t Robert C)
* Fixed customer/vendor cleared on ship/receive update (Chris T, 3548104)
* SECURITY FIX for System/Defaults denial of service advisory (Chris T)
* Added missing ap_transaction_all role (Chris T, h/t Erik H)
* Fixed internal server error setting up user in setup.pl (Chris T)
* Performance fix for templates and format detection (Chris T)

Brian W is Brian Wolf
Chris T is Chris Travers
Erik H is Erik Huelsmann
Nick P is Nick Prater
Nigel T is Nigel Titley
Robert C is Robert James Clay

Changelog for 1.3.20
* Fixes for es_AR translation, duplicate keys removed (Andres B)
* Demo templates provide better handling of paragraph breaks in notes (Chris T)
* Fixed menu anomilies due to menu grants on sub-menus (Chris T)
* Fixed unable to change order or delete it (Chris T, 3535856)